fix register block desktop view clipping issue

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -63,7 +63,7 @@ main.container:hover {
 
 // set register block width as an ID so that it is not affected by main width container (note: adjusted in mobile view)
 #registerblock {
-  width: 30%;
+  width: 35%;
 }
 
 // Spacing for login inputs
