--- a/styles/variableviews.scss
+++ b/styles/variableviews.scss
@@ -28,6 +28,8 @@
   header {
     margin-bottom: .25em;
     height: 4em;
+    padding-left: 0px;
+    padding-right: 2.5vw;
 
     .logo {
       font-size: 5vw;
